@@ -6,3 +6,4 @@ META.yml
 README
 t/00-load.t
 t/pod.t
+META.json
