@@ -1,0 +1,53 @@
+{
+   "abstract" : "a set of Perl::Critic policies implemented and used by logicLAB",
+   "author" : [
+      "Jonas B. Nielsen (jonasbn), <jonasbn@cpan.org>"
+   ],
+   "dynamic_config" : 1,
+   "generated_by" : "Module::Build::Bundle version 0.02, CPAN::Meta::Converter version 2.110930",
+   "license" : [
+      "artistic_1"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Perl-Critic-logicLAB",
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Module::Build::Bundle" : "0.02"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Perl::Critic::Policy::logicLAB::ProhibitShellDispatch" : 0,
+            "Perl::Critic::Policy::logicLAB::ProhibitUseLib" : 0,
+            "Perl::Critic::Policy::logicLAB::RequireVersionFormat" : 0
+         }
+      }
+   },
+   "provides" : {
+      "Perl::Critic::logicLAB" : {
+         "file" : "lib/Perl/Critic/logicLAB.pm",
+         "version" : "0.04"
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "http://rt.cpan.org/NoAuth/Bugs.html?Dist=Perl-Critic-logicLAB"
+      },
+      "homepage" : "http://logiclab.jira.com/wiki/display/PCLL/Home",
+      "license" : [
+         "http://www.perlfoundation.org/artistic_license_1_0"
+      ],
+      "repository" : {
+         "url" : "http://logicLAB.jira.com/svn/PCLL"
+      },
+      "x_ProjectChangelog" : "http://logiclab.jira.com/browse/PCLL#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel",
+      "x_ProjectSite" : "http://logicLAB.jira.com/browse/PCLL",
+      "x_ProjectWiki" : "http://logiclab.jira.com/wiki/display/PCLL/Home"
+   },
+   "version" : "0.04"
+}
