@@ -2,9 +2,11 @@
 abstract: 'a set of Perl::Critic policies implemented and used by logicLAB'
 author:
   - 'Jonas B. Nielsen (jonasbn), <jonasbn@cpan.org>'
+build_requires: {}
 configure_requires:
   Module::Build::Bundle: 0.02
-generated_by: 'Module::Build::Bundle version 0.02'
+dynamic_config: 1
+generated_by: 'Module::Build::Bundle version 0.02, CPAN::Meta::Converter version 2.110930'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -13,16 +15,17 @@ name: Perl-Critic-logicLAB
 provides:
   Perl::Critic::logicLAB:
     file: lib/Perl/Critic/logicLAB.pm
-    version: 0.03
+    version: 0.04
 requires:
+  Perl::Critic::Policy::logicLAB::ProhibitShellDispatch: 0
   Perl::Critic::Policy::logicLAB::ProhibitUseLib: 0
   Perl::Critic::Policy::logicLAB::RequireVersionFormat: 0
 resources:
-  ProjectChangelog: http://logiclab.jira.com/browse/PCLL#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
-  ProjectSite: http://logicLAB.jira.com/browse/PCLL
-  ProjectWiki: http://logiclab.jira.com/wiki/display/PCLL/Home
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Perl-Critic-logicLAB
   homepage: http://logiclab.jira.com/wiki/display/PCLL/Home
   license: http://www.perlfoundation.org/artistic_license_1_0
   repository: http://logicLAB.jira.com/svn/PCLL
-version: 0.03
+  x_ProjectChangelog: http://logiclab.jira.com/browse/PCLL#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
+  x_ProjectSite: http://logicLAB.jira.com/browse/PCLL
+  x_ProjectWiki: http://logiclab.jira.com/wiki/display/PCLL/Home
+version: 0.04
