@@ -3,7 +3,7 @@ NAME
     used by logicLAB
 
 VERSION
-    This documentation describes version 0.02
+    This documentation describes version 0.04
 
 SYNOPSIS
         % perlcritic --theme logiclab
@@ -23,47 +23,12 @@ DESCRIPTION
     policy by policy level, using the same schema
 
 POLICIES
-    Currently Perl::Critic::logicLAB consists of the following policies.
-
+    * Perl::Critic::Policy::logicLAB::ProhibitShellDispatch
     * Perl::Critic::Policy::logicLAB::ProhibitUseLib
     * Perl::Critic::Policy::logicLAB::RequireVersionFormat
 
-CONFIGURATION
-    Please see the separate polices for configuration.
-
-DEPENDENCIES AND REQUIREMENTS
-    None currently.
-
-INCOMPATIBILITIES
-    This distribution holds no known incompatibilities.
-
-BUGS AND LIMITATIONS
-    The distribution has no known bugs or limitations.
-
-BUG REPORTING
-    Please use Requets Tracker for bug reporting:
-
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Perl-Critic-logicLAB
-
-SEE ALSO
-    * Perl::Critic
-    * Task
-
-RESOURCES
-    * Homepage/Wiki: http://logiclab.jira.com/wiki/display/PCLL/Home
-    * Bugtracker:
-    http://rt.cpan.org/NoAuth/Bugs.html?Dist=Perl-Critic-logicLAB
-    * Repository: http://logicLAB.jira.com/svn/PCLL
-    * Project Changelog:
-    http://logiclab.jira.com/browse/PCLL#selectedTab=com.atlassian.jira.plug
-    in.system.project%3Achangelog-panel
-    * Project Site: http://logicLAB.jira.com/browse/PCLL
-
-AUTHOR
-    Jonas B. Nielsen (jonasbn), `<jonasbn@cpan.org>'
-
 COPYRIGHT & LICENSE
-    Copyright 2010 Jonas B. Nielsen (jonasbn), All Rights Reserved.
+    Copyright 2010-2011 Jonas B. Nielsen (jonasbn), All Rights Reserved.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
